--- a/hugo.yaml
+++ b/hugo.yaml
@@ -3,6 +3,7 @@ languageCode: en-us
 title: Ice Tea DevOps
 theme: PaperMod
 params:
+  ShowPostCover: true
   ShowReadingTime: true
   ShowShareButtons: true
   ShowToc: true
