--- a/config/_default/hugo.yaml
+++ b/config/_default/hugo.yaml
@@ -13,7 +13,7 @@ params:
     email: tranngocphat0901@gmail.com
     phone: +84392949809
   subtitle: Ice Tea DevOps - Giải Nhiệt Hệ Thống, Tối Ưu Triển Khai
-  env: production
+  environment: production
   author: "Patrick Tran"
   ShowPostCover: true
   ShowReadingTime: true
