add search feature

--- a/hugo.yaml
+++ b/hugo.yaml
@@ -50,3 +50,8 @@ menu:
       name: Search
       url: /search/
       weight: 50
+outputs:
+  home:
+    - HTML
+    - RSS
+    - JSON # necessary for search
