--- a/hugo.yaml
+++ b/hugo.yaml
@@ -18,8 +18,9 @@ params:
   ShowPostCover: true
   ShowReadingTime: true
   ShowShareButtons: true
+  ShareButtons: ["facebook", "linkedin", "github"]
   ShowToc: true
-  ShowBreadCrumbs: true
+  ShowBreadCrumbs: trueßß
   defaultTheme: auto  # dark/light mode
   ShowPostNavLinks: true
   ShowCodeCopyButtons: true
@@ -55,3 +56,10 @@ outputs:
     - HTML
     - RSS
     - JSON # necessary for search
+socialIcons:
+  - name: "facebook"
+    url: "https://www.facebook.com/"
+  - name: "linkedin"
+    url: "https://www.linkedin.com/"
+  - name: "github"
+    url: "https://github.com/"
