--- a/hugo.yaml
+++ b/hugo.yaml
@@ -50,14 +50,14 @@ menu:
       name: Archives
       url: /archives/
       weight: 30
-    # - identifier: about
-    #   name: About
-    #   url: /about/
-    #   weight: 40
+    - identifier: contact
+      name: Contact
+      url: /contact/
+      weight: 40
     - identifier: search
       name: Search
       url: /search/
-      weight: 40
+      weight: 50
 outputs:
   home:
     - HTML
